--- a/Aula07 - 06.04/projetoNode/package.json
+++ b/Aula07 - 06.04/projetoNode/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon ./server.js"
+    "start": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
